# django-lifecycle

./: manage.py  setup.cfg
src/lifecycle/: models.py
src/lifecycle/migrations/: 0001_initial.py
src/model_lifecycle/: models.py
src/model_lifecycle/static/lifecycle/css/: timeline.css
src/model_lifecycle/templates/snippets/: timeline.htm
src/model_lifecycle/templates/snippets/bs5/: timeline.htm
test_project/: settings.py
test_project/test_project/: settings.py
