[metadata]
name = django-model-lifecycle
description = lifecycle management for model instances
author = David Slusser
author_email = dbslusser@gmail.com
home_page = https://github.com/davidslusser/django-model-lifecycle
long_description_content_type = text/markdown
long_description_file = file: README.md
license = MIT
platform = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src

install_requires =
    Django

[options.packages.find]
where = src
exclude =
    __pycache__
    *.pyc
    tests
    test_project

[bdist_wheel]
universal = 1
